--- a/.github/workflows/control_tests.yaml
+++ b/.github/workflows/control_tests.yaml
@@ -2,13 +2,13 @@ name: Control Push
 on: push
 jobs:
     qa:
-	name: Check tests
-	tuns-on: ubuntu-22.04
+        name: Check tests
+	runs-on: ubuntu-22.04
 	steps:
 	    - name: Checkout on master
 	      uses: actions/checkout@v3
 	
-	    - name: Set up Python
+            - name: Setup Python
 	      uses: actions/setup-python@master
 	      with:
 		python-version: "3.x"
